# DroneThesis

./: .gitignore  Agent.cpp  Agent.hpp  AgentFlowchart  CMakeLists.txt  Coord.cpp  Coord.hpp  Field.cpp  Field.hpp  GenerateField.m  PlotDrones.m  PlotField.m  PlotLogFiles.m  Plotting_with_Matlab.cpp  README.md  SignalSource.cpp  SignalStrength.m  build_and_run.sh  circle testing.drawio  clear_log_and_exe.sh  hello_triangle.cpp  ideas.md  main.cpp  matlab_test.cpp  numbers.cpp  run_build.sh  search_cycle.drawio  testFeval.cpp  writeData2File.cpp
double/full/logs/: agent_log_test_0_sc_0.csv  agent_log_test_0_sc_1.csv  agent_log_test_0_sc_2.csv  agent_log_test_0_sc_3.csv  agent_log_test_0_sc_4.csv  agent_log_test_0_sc_5.csv  agent_log_test_100_sc_1.csv  agent_log_test_100_sc_2.csv  agent_log_test_100_sc_3.csv  agent_log_test_100_sc_4.csv  agent_log_test_100_sc_5.csv  agent_log_test_101_sc_1.csv  agent_log_test_101_sc_2.csv  agent_log_test_101_sc_3.csv  agent_log_test_101_sc_4.csv  agent_log_test_101_sc_5.csv  agent_log_test_10_sc_1.csv  agent_log_test_10_sc_2.csv  agent_log_test_10_sc_3.csv  agent_log_test_10_sc_4.csv  agent_log_test_10_sc_5.csv  agent_log_test_11_sc_1.csv  agent_log_test_11_sc_2.csv  agent_log_test_11_sc_3.csv  agent_log_test_11_sc_4.csv  agent_log_test_11_sc_5.csv  agent_log_test_12_sc_1.csv  agent_log_test_12_sc_2.csv  agent_log_test_12_sc_3.csv  agent_log_test_12_sc_4.csv  agent_log_test_12_sc_5.csv  agent_log_test_13_sc_1.csv  agent_log_test_13_sc_2.csv  agent_log_test_13_sc_3.csv  agent_log_test_13_sc_4.csv  agent_log_test_13_sc_5.csv  agent_log_test_14_sc_1.csv  agent_log_test_14_sc_2.csv  agent_log_test_14_sc_3.csv  agent_log_test_14_sc_4.csv  (+1079 more)
logs/: test.txt  test2.txt
matlab_src/: PlotDrones.m  PlotField.m  PlotLogFiles.m  SignalStrength.m
single/full/logs/: agent_log_test_0_sc_0.csv  agent_log_test_0_sc_1.csv  agent_log_test_0_sc_2.csv  agent_log_test_0_sc_3.csv  agent_log_test_0_sc_4.csv  agent_log_test_0_sc_5.csv  agent_log_test_100_sc_1.csv  agent_log_test_100_sc_2.csv  agent_log_test_100_sc_3.csv  agent_log_test_100_sc_4.csv  agent_log_test_100_sc_5.csv  agent_log_test_10_sc_1.csv  agent_log_test_10_sc_2.csv  agent_log_test_10_sc_3.csv  agent_log_test_10_sc_4.csv  agent_log_test_10_sc_5.csv  agent_log_test_11_sc_1.csv  (+1071 more)
src/: Agent.cpp  Agent.hpp  BoundingPoints.cpp  BoundingPoints.hpp  Defines.hpp  Field.cpp  Field.hpp  Grid.cpp  Grid.hpp  GridValues.hpp  Ring.cpp  Ring.hpp  SignalSource.cpp  SignalSource.hpp  Zone.cpp  Zone.hpp  main.cpp
(+1094 files in other folders)
